--- a/linux.html
+++ b/linux.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-{% for post in site.categories['markdown'] limit:1 %}
+{% for post in site.categories['linux'] limit:1 %}
 <div class="container-fluid image-header" style="background-image: url('{{ post.image }}');">
   <div class="row">
     <div class="image-header-overlay">
