--- a/about.html
+++ b/about.html
@@ -1,23 +1,12 @@
 ---
 layout: default
 ---
-    <div class="subpageHeaderWrapper">
-    <div class="container">
-        <div class="wrapper">
-            <div class="subpageHeader col-md-offset-1">
-                <h1>About me</h1>
-            </div>
-        </div>
-    </div>
-</div>
-<div class="whiteBlock">
-    <div class="container">
-        <div class="wrapper">
-            <div class="fullWidthWrapper">
-                <div class="teamMemberWrapper">
-                    <div class="row">
-                        <div class="teamMember col-md-offset-one-and-half">
-                            <img src="/images/public/about/mike.5b0b092a.png" class="img-responsive img-circle" alt="Mike Cottrill Photo">
+
+<div class="container-fluid image-header">
+  <div class="row">
+    <div class="image-header-overlay">
+      <div class="container">
+			<img src="https://heroh396.github.io/imgs/avt.jpg" alt="H3 photo">
                             <h4>Ho Huy Hung</h4>
                             <h5>Undergraduated Student</h5>
                             <p>
@@ -26,25 +15,22 @@ layout: default
                             <p>
                                 <a href="https://www.linkedin.com/in/huy-hung-ho-6a320411a/" target="_blank"><i class="fa fa-linkedin-square"></i></a>
                             </p>
-                        </div>
-                      </div>
-                </div>
-            </div>
-        </div>
+
+      </div>
     </div>
+  </div>
 </div>
-<div class="lightGrayBlock lastBlock">
-    <div class="container">
-        <div class="wrapper">
-            <div class="fullWidthWrapper">
-                <div class="subpageSubheadWrapper col-md-offset-1">
-                    <div class="subpageSubheadLeft">
-                        <h2>The Mission: sharing knowledge</h2>
-                        <p class="publicText">
-                        </p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
+<div class="container">
+  <div class="col-md-12">
+      <h2 class="posts-intro">The Mission: sharing knowledge</h2>
+  </div>
+</div>
+<div class="container">
+	<div class="col-md-12">
+	    <div class="posts">
+	        <div class="row">
+				Share knowlegdge for everyone.
+	        </div>
+	    </div>
+	</div>
 </div>
