--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@ layout: default
   <div class="row">
     <div class="image-header-overlay">
       <div class="container">
-			<img src="https://heroh396.github.io/imgs/avt.jpg" alt="H3 photo">
+			<img src="https://vi.gravatar.com/userimage/96891767/de11d3899fc81b1fe8c90da9015c7c55.png?size=200" alt="H3 photo">
                             <h4>Ho Huy Hung</h4>
                             <h5>Undergraduated Student</h5>
                             <p>
