--- a/about.html
+++ b/about.html
@@ -22,13 +22,17 @@ layout: default
 </div>
 <div class="container">
   <div class="col-md-12">
-      <h2 class="posts-intro">The Mission: sharing knowledge</h2>
+      <h2 class="posts-intro">The Mission</h2>
   </div>
 </div>
 <div class="container">
 	<div class="col-md-12">
 	    <div class="posts">
-				Share knowlegdge for everyone.
+			Hi everyone.
+			My name is Hung, I come from Vietnam.
+			I am studying in University of Engineering and Technology, VNU. My major is Electronics and Communication.
+			I am learning VHDL – a hardware description language to embedded FPGA, ASIC. I will write and share everything I know.
+			Everyone support yourselves. Thanks, kiki 😀
 	    </div>
 	</div>
 </div>
