--- a/about.html
+++ b/about.html
@@ -28,11 +28,11 @@ layout: default
 <div class="container">
 	<div class="col-md-12">
 	    <div class="posts">
-			Hi everyone.
-			My name is Hung, I come from Vietnam.
-			I am studying in University of Engineering and Technology, VNU. My major is Electronics and Communication.
-			I am learning VHDL – a hardware description language to embedded FPGA, ASIC. I will write and share everything I know.
-			Everyone support yourselves. Thanks, kiki 😀
+			Hi everyone.<br>
+			My name is Hung, I come from Vietnam.<br>
+			I am studying in University of Engineering and Technology, VNU. My major is Electronics and Communication.<br>
+			I am learning VHDL – a hardware description language to embedded FPGA, ASIC. I will write and share everything I know.<br>
+			Everyone support yourselves. Thanks, kiki 😀<br>
 	    </div>
 	</div>
 </div>
