--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@ layout: default
 
 <div class="container-fluid image-header">
   <div class="row">
-    <div class="image-header-overlay">
+	  <!---<div class="image-header-overlay">-->
       <div class="container">
 			<img src="https://vi.gravatar.com/userimage/96891767/de11d3899fc81b1fe8c90da9015c7c55.png?size=200" alt="H3 photo">
                             <h2>Ho Huy Hung</h2>
@@ -17,7 +17,7 @@ layout: default
                             </p>
 
       </div>
-    </div>
+	  <!---</div>-->
   </div>
 </div>
 <div class="container">
