--- a/linux.html
+++ b/linux.html
@@ -27,7 +27,7 @@ layout: default
 	<div class="col-md-12">
 	    <div class="posts">
 	        <div class="row">
-	            {% for post in site.categories.markdown offset:1 %}
+	            {% for post in site.categories.linux offset:1 %}
 	            {% include listpost.html p=post %}
 	            {% endfor %}
 	        </div>
