--- a/about.html
+++ b/about.html
@@ -2,11 +2,9 @@
 layout: default
 ---
 
-<div class="container-fluid image-header">
   <div class="row">
-    <div class="image-header-overlay">
       <div class="container">
-			<img src="https://vi.gravatar.com/userimage/96891767/de11d3899fc81b1fe8c90da9015c7c55.png?size=200" alt="H3 photo">
+			<img src="https://vi.gravatar.com/userimage/96891767/de11d3899fc81b1fe8c90da9015c7c55.png" alt="H3 photo">
                             <h2>Ho Huy Hung</h2>
                             <h3>Undergraduated Student</h3>
                             <p>
@@ -18,8 +16,6 @@ layout: default
 
       </div>
     </div>
-  </div>
-</div>
 <div class="container">
   <div class="col-md-12">
       <h2 class="posts-intro">The Mission</h2>
