--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 ---
-
+<!---
 <div class="container-fluid image-header">
   <div class="row">
       <div class="container">
@@ -14,7 +14,7 @@ layout: default
       </div>
   </div>
 </div>
-<!---<div class="container">
+<div class="container">
   <div class="col-md-12">
       <h2 class="posts-intro">The Mission</h2>
   </div>
