--- a/about.html
+++ b/about.html
@@ -1,6 +1,8 @@
 ---
 layout: default
 ---
+<img src="https:/yoloh3/github.io/imgs/cv.pdf" alt="H3 cv">
+
 <!---
 <div class="container-fluid image-header">
   <div class="row">
