--- a/about.html
+++ b/about.html
@@ -1,7 +1,13 @@
 ---
 layout: default
 ---
-<img src="https:/yoloh3/github.io/imgs/cv.pdf" alt="H3 cv">
+<div class="container-fluid image-header">
+	<div class="row">
+		<div class="ocntainer">
+			<img src="https:/yoloh3/github.io/imgs/cv.pdf" alt="H3 cv">
+		</div>
+	</div>
+</div>
 
 <!---
 <div class="container-fluid image-header">
