--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@ layout: default
 <div class="container-fluid image-header">
 	<div class="row">
 		<div class="ocntainer">
-			<img src="https:/yoloh3/github.io/imgs/cv.pdf" alt="H3 cv">
+			<img src="https:/yoloh3/github.io/imgs/cv.png" alt="H3 cv">
 		</div>
 	</div>
 </div>
