--- a/about.html
+++ b/about.html
@@ -3,9 +3,7 @@ layout: default
 ---
 <div class="container-fluid image-header">
 	<div class="row">
-		<div class="ocntainer">
-			<img src="https:/yoloh3.github.io/imgs/cv.png" alt="H3 cv">
-		</div>
+			<img src="https:/yoloh3.github.io/imgs/cv.png?size=200" alt="H3 cv">
 	</div>
 </div>
 
