--- a/about.html
+++ b/about.html
@@ -1,13 +1,35 @@
-<!DOCTYPE html>
-<html>
-  {% include head.html %}
-    <body>
-    {% include header.html %}
-    <div class="container-fluid">
-			<img src="https:/yoloh3.github.io/imgs/cv.png?size=50" alt="H3 cv">
-    </div>
-  {% include footer.html %}    
-  </body>
-</html>
+---
+layout: default
+---
+<img src="https:/yoloh3.github.io/imgs/cv.png?size=200" alt="H3 cv">
 
-
+<!---
+<div class="container-fluid image-header">
+  <div class="row">
+      <div class="container">
+			<img src="https://vi.gravatar.com/userimage/96891767/de11d3899fc81b1fe8c90da9015c7c55.png?size=200" alt="H3 photo">
+                            <h2>Ho Huy Hung</h2>
+                            <h3>Undergraduated Student</h3>
+                            <p>
+                                Hi everyone.
+                            </p>
+      </div>
+  </div>
+</div>
+<div class="container">
+  <div class="col-md-12">
+      <h2 class="posts-intro">The Mission</h2>
+  </div>
+</div>
+<div class="container">
+	<div class="col-md-12">
+	    <div class="posts">
+			Hi everyone.<br>
+			My name is Hung, I come from Vietnam.<br>
+			I am studying in University of Engineering and Technology, VNU. My major is Electronics and Communication.<br>
+			I am learning VHDL – a hardware description language to embedded FPGA, ASIC. I will write and share everything I know.<br>
+			Everyone support yourselves. Thanks, kiki 😀<br>
+	    </div>
+	</div>
+	</div> 
+-->
