--- a/about.html
+++ b/about.html
@@ -1,7 +1,9 @@
 ---
 layout: default
 ---
-<img src="https:/yoloh3.github.io/imgs/cv.png?size=50" alt="H3 cv">
+ <div class="container">
+	<img src="https:/yoloh3.github.io/imgs/cv.png" alt="H3 cv">
+ </div>
 
 <!---
 <div class="container-fluid image-header">
