--- a/about.html
+++ b/about.html
@@ -4,6 +4,7 @@ layout: default
  <div class="container">
 	<img src="https:/yoloh3.github.io/imgs/cv.png" alt="H3 cv">
  </div>
+<a rel="author" href="https://plus.google.com/u/0/110032598276786643658?rel=author"> 
 
 <!---
 <div class="container-fluid image-header">
