--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@ layout: default
 <div class="container-fluid image-header">
   <div class="row">
       <div class="container">
-			<img src="https://vi.gravatar.com/userimage/96891767/de11d3899fc81b1fe8c90da9015c7c55.png?size=200" alt="H3 photo">
+			<img src="https://yoloh3.github.io/imgs/avt.jpg" alt="H3 photo">
                             <h2>Ho Huy Hung</h2>
                             <h3>Undergraduated Student</h3>
                             <p>
