Remove website name in CMAKE for removing warning mail

--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 layout: default
 ---
  <div class="container">
-	<img src="https:/yoloh3.github.io/imgs/cv.png" style="width: 50%; height: 50%" alt="H3 cv">
+	<img src="https:/yoloh3.github.io/imgs/cv.png" width="200" height="40" alt="H3 cv">
  </div>
 <a rel="author" href="https://plus.google.com/u/0/110032598276786643658?rel=author"> 
 
