Edit first jp post

--- a/life.html
+++ b/life.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-{% for post in site.categories['learn_english'] limit:1 %}
+{% for post in site.categories['life'] limit:1 %}
 <div class="container-fluid image-header" style="background-image: url('{{ post.image }}');">
   <div class="row">
     <div class="image-header-overlay">
