--- a/about.html
+++ b/about.html
@@ -2,37 +2,6 @@
 layout: default
 ---
  <div class="container">
-	<img src="https:/yoloh3.github.io/imgs/cv.png" width="1320" height="1872" alt="H3 cv">
+	<img src="https:/yoloh3.github.io/imgs/cv.png" alt="H3 cv">
  </div>
 <a rel="author" href="https://plus.google.com/u/0/110032598276786643658?rel=author"> 
-
-<!---
-<div class="container-fluid image-header">
-  <div class="row">
-      <div class="container">
-			<img src="https://yoloh3.github.io/imgs/avt.jpg" alt="H3 photo">
-                            <h2>Ho Huy Hung</h2>
-                            <h3>Undergraduated Student</h3>
-                            <p>
-                                Hi everyone.
-                            </p>
-      </div>
-  </div>
-</div>
-<div class="container">
-  <div class="col-md-12">
-      <h2 class="posts-intro">The Mission</h2>
-  </div>
-</div>
-<div class="container">
-	<div class="col-md-12">
-	    <div class="posts">
-			Hi everyone.<br>
-			My name is Hung, I come from Vietnam.<br>
-			I am studying in University of Engineering and Technology, VNU. My major is Electronics and Communication.<br>
-			I am learning VHDL – a hardware description language to embedded FPGA, ASIC. I will write and share everything I know.<br>
-			Everyone support yourselves. Thanks, kiki 😀<br>
-	    </div>
-	</div>
-	</div> 
--->
