--- a/about.html
+++ b/about.html
@@ -1,7 +1,6 @@
 ---
 layout: default
 ---
- <div class="container">
-	<img width="600" src="https:/yoloh3.github.io/imgs/cv.png" alt="H3 cv">
- </div>
-<a rel="author" href="https://plus.google.com/u/0/110032598276786643658?rel=author">
+<p align="center">
+	<img width="1000" src="https:/yoloh3.github.io/imgs/cv.png" alt="H3 cv">
+</p>
