--- a/about.html
+++ b/about.html
@@ -2,5 +2,6 @@
 layout: default
 ---
 <p align="center">
-	<img width="1000" src="https:/yoloh3.github.io/imgs/cv.png" alt="H3 cv">
+   UNDER CONSTRUCTION...
+   Come back later, friend.
 </p>
