--- a/index.html
+++ b/index.html
@@ -31,3 +31,4 @@ layout: default
     </div>
   </div>
 </div>
+<meta name="google-site-verification" content="ZABsvo6CzwwlUUZbRDfynoKhPunDMBPdXqQfImKy8xA" />
