Updated layout for google search console

--- a/about.html
+++ b/about.html
@@ -1,7 +1,9 @@
 ---
 layout: default
+title: Yoloh3 - Ho Huy Hung
 ---
-<p align="center">
-   UNDER CONSTRUCTION...
-   Come back later, friend.
-</p>
+
+<div class="col-sm-2 footer-column">
+    <h3>Yoloh3 - Ho Huy Hung</h3>
+    <p> Hi everyone. My name is Ho Huy Hung (Ho is last name), or you can call me as H3. Currently I'm a semiconductor engineer. Hope can make friend with everyone. Thanks so much for commign here with me, my friends.
+</div>
