Updated directory arch and images

--- a/about.html
+++ b/about.html
@@ -1,9 +1,5 @@
 ---
 layout: default
-title: Yoloh3 - Ho Huy Hung
+title: About me, Yoloh3 - Ho Huy Hung
 ---
-
-<div class="col-sm-2 footer-column">
-    <h3>Yoloh3 - Ho Huy Hung</h3>
-    <p> Hi everyone. My name is Ho Huy Hung (Ho is last name), or you can call me as H3. Currently I'm a semiconductor engineer. Hope can make friend with everyone. Thanks so much for commign here with me, my friends.
-</div>
+<div class="badge-base LI-profile-badge" data-locale="fr_FR" data-size="large" data-theme="dark" data-type="HORIZONTAL" data-vanity="yoloh3" data-version="v1"><a class="badge-base__link LI-simple-link" href="https://vn.linkedin.com/in/yoloh3?trk=profile-badge">Huy Hung Ho</a></div>
