--- a/soc.html
+++ b/soc.html
@@ -20,7 +20,7 @@ layout: default
 {% endfor %}
 <div class="container">
   <div class="col-md-12">
-      <h2 class="posts-intro">Posts About System On Chip</h2>
+      <h2 class="posts-intro">Posts About Semiconductor</h2>
   </div>
 </div>
 <div class="container">
