Log: update about

--- a/about.html
+++ b/about.html
@@ -2,4 +2,4 @@
 layout: default
 title: About me, Yoloh3 - Ho Huy Hung
 ---
-<div class="badge-base LI-profile-badge" data-locale="fr_FR" data-size="large" data-theme="dark" data-type="HORIZONTAL" data-vanity="yoloh3" data-version="v1"><a class="badge-base__link LI-simple-link" href="https://vn.linkedin.com/in/yoloh3?trk=profile-badge">Huy Hung Ho</a></div>
+<div class="badge-base LI-profile-badge" data-locale="vn_VN" data-size="large" data-theme="dark" data-type="HORIZONTAL" data-vanity="yoloh3" data-version="v1"><a class="badge-base__link LI-simple-link" href="https://linkedin.com/in/yoloh3?trk=profile-badge">Huy Hung Ho</a></div>
