--- a/work.html
+++ b/work.html
@@ -2,13 +2,13 @@
 layout: default
 ---
 
-{% for post in site.categories['linux'] limit:1 %}
+{% for post in site.categories['work'] limit:1 %}
 <div class="container-fluid image-header" style="background-image: url('{{ post.image }}');">
   <div class="row">
     <div class="image-header-overlay">
       <div class="container">
         <div class="col-md-10 col-md-offset-1">
-          <h3>The Latest in Linux</h3>
+          <h3>The Latest in Work</h3>
           <div class="borderline"></div>
           <h1 class="featured">{{post.title}}</h1>
           <a href="{{ post.url }}" class="btn btn-orange btn-blog">READ POST</a>
@@ -20,14 +20,14 @@ layout: default
 {% endfor %}
 <div class="container">
   <div class="col-md-12">
-      <h2 class="posts-intro">Posts About Linux</h2>
+      <h2 class="posts-intro">Posts About Work</h2>
   </div>
 </div>
 <div class="container">
 	<div class="col-md-12">
 	    <div class="posts">
 	        <div class="row">
-	            {% for post in site.categories.linux offset:1 %}
+	            {% for post in site.categories.work offset:1 %}
 	            {% include listpost.html p=post %}
 	            {% endfor %}
 	        </div>
