--- a/about.html
+++ b/about.html
@@ -74,7 +74,7 @@ shortUrl:
               <li>Where I am coding: <a href="https://github.com/yoloh3">Github.com/yoloh3</a></li>
               <li>Wanna be a part of my life: <a href="https://www.facebook.com/yoloh3">Facebook.com/yoloh3</a></li>
             </ul>
-            <br><br>
+            <br><br></div>
 
             {% include signup-block.html %}
             {% if page.comments %}
