--- a/about.html
+++ b/about.html
@@ -59,7 +59,7 @@ shortUrl:
             <br><br>
               After 5 years working at Toshiba Corporation (3 years in Japan and 2 years in Vietnam),
             I have joined Quest Global Vietnam (former name is Synapse Design Inc.) in the role of DFT Lead Engineer.
-            Currently, I am working with customers as a project leader and customer interfaSeries of IC design (yoloh3.com)Series of IC design (yoloh3.com)ce.
+            Currently, I am working with customers as a project leader and customer interface.
             I am familiar with global working environments from multiple projects that worked with multi-functional global teams from Japan, India, Malaysia, America.
             <br><br>
               Besides, I am highly passionate about cutting-edge technologies, knowledge sharing, and blog writing.
