Log: update about tittle

--- a/about.html
+++ b/about.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Who am I? And who are you..
+title: Who am I?
 date: 2024-5-24 11:59
 teaser: My name is.. My name is.. chikachika-Yoloh3
 image: /imgs/logo/H3_logo.PNG
